# research_copilot

./: .pre-commit-config.yaml  Makefile  README.md  env.example  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yaml  coverage.yaml
app/: config.py  mcp_client.py  router.py  ui_streamlit.py
app/tools/: risk_tool.py  sentiment_tool.py  strategy_tool.py
tests/: test_config.py  test_integration.py  test_mcp.py  test_router.py  test_ui.py
